# CRUST-bench

./: .gitignore
docs/superpowers/plans/: 2026-04-02-integration-test-dataset.md
docs/superpowers/specs/: 2026-04-02-integration-test-dataset-design.md
scripts/: compute_metrics.py
src/: endpoint_config.py  repair_tests.py  repairer.py  test_repairer.py  transpiler.py
src/endpoints/: call_endpoint.py  openrouter.py
src/endpoints/configs/: openrouter_deepseek_r1.json  openrouter_gemini31pro.json  openrouter_gpt54.json  openrouter_kimi_k25.json
src/outputs/gemini31pro/: Cargo.toml  error_distribution.json  error_report.csv  loc.csv  model_perf.csv  overall_stats  test_report.csv  test_report_p_f.csv
src/outputs/gemini31pro/Genetic_neural_network_for_simple_control/: Cargo.toml
src/outputs/gemini31pro/Graph_recogniser/: Cargo.toml
src/outputs/gemini31pro/Holdem_Odds/: Cargo.toml
src/outputs/gemini31pro/Megalania/: Cargo.toml
src/outputs/gemini31pro/Megalania/metadata/output/: initial.txt  res_0.txt
src/outputs/gemini31pro/Megalania/metadata/output/prompt/transpilation/: transpilation_prompt.json
src/outputs/gemini31pro/XOpt/: Cargo.toml
src/outputs/gemini31pro/amp/: Cargo.toml
src/outputs/gemini31pro/bigint/: Cargo.toml
src/outputs/gemini31pro/bostree/: Cargo.toml
src/outputs/gemini31pro/bostree/metadata/: code_metrics.json
src/outputs/gemini31pro/cfsm/: Cargo.toml
src/outputs/gemini31pro/file2str/: Cargo.toml
src/outputs/gemini31pro/hamta/: Cargo.toml
src/outputs/gemini31pro/libbeaufort/: Cargo.toml
src/outputs/gemini31pro/libpsbt/: Cargo.toml
src/outputs/gemini31pro/roaring_bitmap/: Cargo.toml
src/outputs/gemini31pro/totp/: Cargo.toml
src/outputs/gemini31pro_test_repair/: error_count.csv  error_distribution.json  error_report.csv  model_perf.csv  overall_stats  test_report.csv  test_report_0.json  test_report_1.json  test_report_2.json  test_report_p_f.csv
src/outputs/gemini31pro_test_repair/Math_Library_in_C/: Cargo.toml
src/outputs/gemini31pro_test_repair/NandC/: Cargo.toml
src/outputs/gemini31pro_test_repair/Phills_DHT/: Cargo.toml
src/outputs/gemini31pro_test_repair/Simple_Sparsehash/: Cargo.toml
src/outputs/gemini31pro_test_repair/btree_map/: Cargo.toml
src/outputs/gemini31pro_test_repair/fleur/: Cargo.toml
src/outputs/gemini31pro_test_repair/fs_c/: Cargo.toml
src/outputs/gemini31pro_test_repair/inversion_list/: Cargo.toml
src/outputs/gemini31pro_test_repair/lambda_calculus_eval/: Cargo.toml
src/outputs/gemini31pro_test_repair/libvcd/: Cargo.toml
src/outputs/gemini31pro_test_repair/murmurhash_c/: Cargo.toml
src/outputs/gemini31pro_test_repair/proj_42_Kocaeli_Printf/: Cargo.toml
src/outputs/gemini31pro_test_repair/razz_simulation/: Cargo.toml
src/outputs/gemini31pro_test_repair/rbtree_lab/: Cargo.toml
src/outputs/gemini31pro_test_repair/satc/: Cargo.toml
src/outputs/gpt54/: error_count.csv  error_distribution.json  error_report.csv  loc.csv  model_perf.csv  overall_stats  test_report.csv  test_report_p_f.csv
src/outputs/gpt54/CircularBuffer/: Cargo.toml
src/outputs/gpt54/LTRE/: Cargo.toml
src/outputs/gpt54/Remimu/: Cargo.toml
src/outputs/gpt54/SimpleXML/: Cargo.toml
src/outputs/gpt54/SlothLang/: Cargo.toml
src/outputs/gpt54/cJSON/: Cargo.toml
src/outputs/gpt54/carrays/: Cargo.toml
src/outputs/gpt54/clhash/: Cargo.toml
src/outputs/gpt54/csyncmers/: Cargo.toml
src/outputs/gpt54/dict/: Cargo.toml
src/outputs/gpt54/gorilla_paper_encode/: Cargo.toml
src/outputs/gpt54/kairoCompiler/: Cargo.toml
src/outputs/gpt54/lib2bit/: Cargo.toml
src/outputs/gpt54/libfor/: Cargo.toml
src/outputs/gpt54/libm17/: Cargo.toml
src/outputs/gpt54/mdb/: accelerator.db.data  accelerator.db.index  gabriel.db.data  gabriel.db.index  misakawa.db.index
src/outputs/gpt54/merkle_tree_c/: Cargo.toml
src/outputs/gpt54/skp/: Cargo.toml
src/outputs/gpt54/utf8/: Cargo.toml
src/outputs/gpt54_test/: error_count.csv  error_distribution.json  error_report.csv  loc.csv  model_perf.csv  overall_stats  test_report_p_f.csv
src/outputs/gpt54_test_repair/: error_distribution.json  error_report.csv  model_perf.csv  overall_stats  test_report.csv  test_report_0.json  test_report_1.json  test_report_2.json  test_report_3.json  test_report_p_f.csv
src/outputs/gpt54_test_repair/FastHamming/: Cargo.toml
src/outputs/gpt54_test_repair/Simple_Config/: Cargo.toml
src/outputs/gpt54_test_repair/avalanche/: Cargo.toml
src/outputs/gpt54_test_repair/coroutine/: Cargo.toml
src/outputs/gpt54_test_repair/cset/: Cargo.toml
src/outputs/gpt54_test_repair/rubiksolver/: Cargo.toml
src/outputs/gpt54_test_repair/rubiksolver/metadata/output/: initial.txt
src/outputs/gpt54_test_repair/rubiksolver/src/: hash.rs  heap.rs  rubik_model.rs  solve_rubik.rs
src/outputs/gpt54_test_repair/worsp/: Cargo.toml
src/outputs/gpt54_test_repair/worsp/metadata/: code_metrics.json
src/outputs/gpt54_test_repair/worsp/src/: worsp.rs
src/outputs/kimi_k25/: error_count.csv  error_distribution.json  error_report.csv  loc.csv  model_perf.csv  overall_stats  test_report.csv  test_report_p_f.csv
src/outputs/kimi_k25/c_blind_rsa_signatures/: Cargo.toml
src/outputs/kimi_k25/c_blind_rsa_signatures/metadata/: code_metrics.json
src/outputs/kimi_k25/c_blind_rsa_signatures/metadata/output/: initial.txt  res_1.txt  res_3.txt
src/outputs/kimi_k25/c_blind_rsa_signatures/metadata/output/prompt/transpilation/: transpilation_prompt.json
src/outputs/kimi_k25/c_blind_rsa_signatures/src/: blind_rsa.rs  lib.rs  test.rs
src/outputs/kimi_k25_test_repair/: error_distribution.json  error_report.csv  model_perf.csv  overall_stats  test_report.csv  test_report_0.json  test_report_1.json  test_report_3.json  test_report_p_f.csv
src/outputs/kimi_k25_test_repair/fft/: Cargo.toml
src/outputs/kimi_k25_test_repair/fft/metadata/: code_metrics.json
src/outputs/kimi_k25_test_repair/fft/metadata/output/: initial.txt
src/outputs/kimi_k25_test_repair/fft/src/: fft.rs
src/prompters/: prompter_utils.py
tables/: metrics.md
(+3551 files in other folders)
