[package]
name = "rubiksolver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true }

frunk_core = { workspace = true }

regex = { workspace = true }

openssl-sys = { workspace = true }

openssl = { workspace = true }

termios = { workspace = true }

num-traits = { workspace = true }

serde = { workspace = true }

bincode = { workspace = true }

ulid = { workspace = true }

term_size = { workspace = true }

atty = { workspace = true }

clap = { workspace = true }

env_logger = { workspace = true }

hostname = { workspace = true }

os_pipe = { workspace = true }

signal-hook = { workspace = true }

magic = { workspace = true }

users = { workspace = true }

semver = { workspace = true }

cookie = { workspace = true }

lazy_static = { workspace = true }

nix = { workspace = true }

syslog = { workspace = true }

rand = { workspace = true }

chrono = { workspace = true }

libc = { workspace = true }


[lib]
path = "src/lib.rs"

[[test]]
name = "hash_tests"
path = "src/bin/hash_tests.rs"

[[test]]
name = "heap_tests"
path = "src/bin/heap_tests.rs"

[[test]]
name = "rubik_model_tests"
path = "src/bin/rubik_model_tests.rs"
