[package]
name = "worsp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true }

frunk_core = { workspace = true }

regex = { workspace = true }

openssl-sys = { workspace = true }

openssl = { workspace = true }

termios = { workspace = true }

num-traits = { workspace = true }

serde = { workspace = true }

bincode = { workspace = true }

ulid = { workspace = true }

term_size = { workspace = true }

atty = { workspace = true }

clap = { workspace = true }

env_logger = { workspace = true }

hostname = { workspace = true }

os_pipe = { workspace = true }

signal-hook = { workspace = true }

magic = { workspace = true }

users = { workspace = true }

semver = { workspace = true }

cookie = { workspace = true }

lazy_static = { workspace = true }

nix = { workspace = true }

syslog = { workspace = true }

rand = { workspace = true }

chrono = { workspace = true }

libc = { workspace = true }

